@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2005)
+ - Added patch 1237485: FCKEditor for editing HTML event descriptions
  - Fixed bug: view_entry.php was displaying '&amp' instead of '&amp;'
  - Fixed bug 1254983: nulogin.php throws language errors
  - Added install/index and classes/*.class files to update_translation.pl files list
